--- a/src/components/Details/Details.css
+++ b/src/components/Details/Details.css
@@ -68,7 +68,8 @@ padding: 2%;
   color: #a7a9be;
   text-align: justify;
   margin-top: 25%;
-  padding: 0 230px;
+  padding: 80px 230px;
+  /* border:3px solid red; */
 }
 
 .precio {
@@ -112,7 +113,7 @@ padding: 2%;
   height: 42px;
   left: 50%;
   transform: translateX(-50%);
-  top: 613px;
+  top: 660px;
   margin-top: 6%;
   font-family: proxima-nova, sans-serif;
   font-style: normal;
@@ -121,6 +122,7 @@ padding: 2%;
   line-height: 42px;
   color: #4a4949;
   text-align: center; /* Centrar el texto horizontalmente */
+  /* background-color: red; */
 }
 
 .filtros {
@@ -196,7 +198,7 @@ padding: 2%;
 
 .carrusel {
   padding-top: 50%;
-  margin-top: 5%;
+  margin-top: 15%;
 }
 
 .Review {
